--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,8 @@ dependencies:
   cached_network_image: 3.4.1
   flutter:
     sdk: flutter
+  flutter_bloc: 8.1.3
+  http: 1.2.2
   lint: 2.2.0
 
 dev_dependencies:
@@ -60,5 +62,5 @@ flutter:
 
 flutter_intl:
   enabled: true
-  class_name: String
+  class_name: Strings
   nullsafety: true
