--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,15 +11,17 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_bloc: 8.1.3
+  flutter_simple_dependency_injection: 2.0.0
   http: 1.2.2
+  json_annotation: 4.8.1
   lint: 2.2.0
+  sqflite: 2.4.1
 
 dev_dependencies:
   build_runner: 2.4.8
   flutter_test:
     sdk: flutter
   intl_utils: 2.8.7
-  json_annotation: 4.8.1
   json_serializable: 6.7.1
 
 # For information on the generic Dart part of this file, see the
