--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
-        android:label="navatech_assignment"
+        android:label="Album Gallery Demo"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
